--- a/source/styles/smithers.css
+++ b/source/styles/smithers.css
@@ -60,3 +60,28 @@ html {
     font-style: normal;
 
 }
+
+#command-container {
+    /* background-color: aliceblue; */
+    width: 66%;
+    color: green;
+    left: 17%;
+    top: 20%;
+    height: 60%;
+    position: absolute;
+}
+/* 
+.commandInput{
+    width: 100%;
+    bottom: 0;
+    position: absolute;
+    height: 10%;
+} */
+.commandOutput {
+    display: flex;
+flex-direction: column-reverse;
+    width: 100%;    
+    height: 100%;
+    overflow-y: hidden;
+    font-size: 2em;
+}
