--- a/source/styles/smithers.css
+++ b/source/styles/smithers.css
@@ -79,9 +79,10 @@ html {
 } */
 .commandOutput {
     display: flex;
-flex-direction: column-reverse;
+    flex-direction: column-reverse;
     width: 100%;    
     height: 100%;
     overflow-y: hidden;
     font-size: 2em;
+    overflow-wrap: break-word;
 }
